--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "fifthWeekPractice",
-  "homepage": "https://github.com/Jothervate/fifthWeekPractice",
+  "name": "sixthWeekPractice",
+  "homepage":"https://github.com/Jothervate/sixthWeekPractice",
   "private": true,
   "version": "0.0.0",
   "type": "module",
